// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders block 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="f1q3e9lo"
>
  Button
</ButtonOrLink>
`;

exports[`<Button /> renders borderless 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="feym4qr"
>
  Button
</ButtonOrLink>
`;

exports[`<Button /> renders disabled 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="fcp2blp"
  disabled={true}
>
  Button
</ButtonOrLink>
`;

exports[`<Button /> renders inverted 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="f1ln8ri9"
>
  Button
</ButtonOrLink>
`;

exports[`<Button /> renders large 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="f1lk7l4z"
>
  Button
</ButtonOrLink>
`;

exports[`<Button /> renders loading 1`] = `
<ButtonOrLink
  aria-busy={true}
  className="fhyleg5"
  loading={true}
>
  <Loader
    inline={true}
    inverted={true}
  />
</ButtonOrLink>
`;

exports[`<Button /> renders small 1`] = `
<ButtonOrLink
  aria-busy={false}
  className="f7neeh1"
>
  Button
</ButtonOrLink>
`;
